# great-company-tree

./: Dockerfile  README.md  case_study.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
docs/: openapi.yml
scripts/: demo.py
src/: crud.py  crud.py.bak  database.py  main.py  models.py
src/domain/company_hierarchy/: manager.py
src/routes/v1/: __init__.py  company_units.py
src/schemas/: db_schemas.py  requests.py  responses.py
