[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = ""
authors = ["Mátyás Sándor <matyas.sandor@lego.com>"]
include = ["src", "scripts"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
SQLAlchemy = "^2.0.35"
uvicorn = "^0.31.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
